--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "epic-spinners": "^1.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
